[gd_scene load_steps=6 format=3 uid="uid://cdxs77k8sp6qo"]

[ext_resource type="Texture2D" uid="uid://c255w0fi08dhy" path="res://assets/ui/buy.png" id="2_3ii8i"]
[ext_resource type="Script" uid="uid://baijyxiyw7t2m" path="res://src/menus/description.gd" id="2_7ywdu"]
[ext_resource type="Theme" uid="uid://b2ph8ikxoqmwf" path="res://src/default.theme" id="3_3ii8i"]
[ext_resource type="Texture2D" uid="uid://jwcubcargkae" path="res://assets/ui/mouse_left.png" id="4_7ywdu"]
[ext_resource type="Texture2D" uid="uid://cw5u37ye6gmfs" path="res://assets/ui/mouse_right.png" id="5_3ii8i"]

[node name="Description" type="TextureRect"]
offset_left = 387.0
offset_top = 42.0
offset_right = 768.0
offset_bottom = 198.0
mouse_filter = 2
expand_mode = 1
script = ExtResource("2_7ywdu")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -1.0
offset_right = -39.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_3ii8i")
expand_mode = 1
flip_h = true

[node name="Perk" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 149.0
offset_top = 11.0
offset_right = 189.0
offset_bottom = 51.0

[node name="Price" type="Label" parent="Perk"]
layout_mode = 0
offset_left = -1.0
offset_top = 31.0
offset_right = 114.0
offset_bottom = 61.0
theme = ExtResource("3_3ii8i")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 21
text = "$11037"
horizontal_alignment = 2

[node name="Buy" type="Control" parent="Perk"]
layout_mode = 3
anchors_preset = 0
offset_left = -47.0
offset_top = -5.0
offset_right = -7.0
offset_bottom = 35.0
mouse_filter = 2

[node name="Label" type="Label" parent="Perk/Buy"]
layout_mode = 0
offset_left = 99.0
offset_top = 75.0
offset_right = 163.0
offset_bottom = 114.0
theme = ExtResource("3_3ii8i")
theme_override_font_sizes/font_size = 31
text = "Buy"

[node name="TextureRect" type="TextureRect" parent="Perk/Buy"]
layout_mode = 0
offset_left = 37.0
offset_top = 65.0
offset_right = 101.0
offset_bottom = 129.0
mouse_filter = 2
texture = ExtResource("4_7ywdu")
expand_mode = 1

[node name="Sell" type="Control" parent="Perk"]
layout_mode = 3
anchors_preset = 0
offset_left = -47.0
offset_top = -5.0
offset_right = -7.0
offset_bottom = 35.0
mouse_filter = 2

[node name="Label" type="Label" parent="Perk/Sell"]
layout_mode = 0
offset_left = 99.0
offset_top = 75.0
offset_right = 163.0
offset_bottom = 114.0
theme = ExtResource("3_3ii8i")
theme_override_font_sizes/font_size = 31
text = "Sell"

[node name="TextureRect" type="TextureRect" parent="Perk/Sell"]
layout_mode = 0
offset_left = 37.0
offset_top = 65.0
offset_right = 101.0
offset_bottom = 129.0
mouse_filter = 2
texture = ExtResource("5_3ii8i")
expand_mode = 1

[node name="Description" type="Label" parent="Perk"]
layout_mode = 0
offset_left = -147.0
offset_top = 31.0
offset_right = 8.0
offset_bottom = 121.0
theme = ExtResource("3_3ii8i")
theme_override_font_sizes/font_size = 12
text = "asdasdadasdasda"
autowrap_mode = 3

[node name="ItemName" type="Label" parent="."]
layout_mode = 0
offset_left = 41.0
offset_top = 18.0
offset_right = 163.0
offset_bottom = 48.0
theme = ExtResource("3_3ii8i")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 21
text = "Item Name"

[node name="BuyRental" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_right = -4.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="RentalText" type="Label" parent="BuyRental"]
visible = false
layout_mode = 0
offset_left = 193.0
offset_top = 24.0
offset_right = 331.0
offset_bottom = 54.0
theme = ExtResource("3_3ii8i")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 21
text = "Rental Cost"
horizontal_alignment = 2

[node name="Price" type="Label" parent="BuyRental"]
layout_mode = 0
offset_left = 184.0
offset_top = 48.0
offset_right = 299.0
offset_bottom = 78.0
theme = ExtResource("3_3ii8i")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 21
text = "$11037"
horizontal_alignment = 2

[node name="Buy" type="Control" parent="BuyRental"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="Label" type="Label" parent="BuyRental/Buy"]
layout_mode = 0
offset_left = 99.0
offset_top = 75.0
offset_right = 163.0
offset_bottom = 114.0
theme = ExtResource("3_3ii8i")
theme_override_font_sizes/font_size = 31
text = "Buy"

[node name="TextureRect" type="TextureRect" parent="BuyRental/Buy"]
layout_mode = 0
offset_left = 37.0
offset_top = 65.0
offset_right = 101.0
offset_bottom = 129.0
mouse_filter = 2
texture = ExtResource("4_7ywdu")
expand_mode = 1

[node name="Sell" type="Control" parent="BuyRental"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="Label" type="Label" parent="BuyRental/Sell"]
layout_mode = 0
offset_left = 99.0
offset_top = 75.0
offset_right = 163.0
offset_bottom = 114.0
theme = ExtResource("3_3ii8i")
theme_override_font_sizes/font_size = 31
text = "Sell"

[node name="TextureRect" type="TextureRect" parent="BuyRental/Sell"]
layout_mode = 0
offset_left = 37.0
offset_top = 65.0
offset_right = 101.0
offset_bottom = 129.0
mouse_filter = 2
texture = ExtResource("5_3ii8i")
expand_mode = 1

[node name="Catalogue" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="Description" type="Label" parent="Catalogue"]
layout_mode = 0
offset_left = 42.0
offset_top = 43.0
offset_right = 295.0
offset_bottom = 148.0
theme = ExtResource("3_3ii8i")
theme_override_font_sizes/font_size = 12
text = "asdasdadasdasda"
autowrap_mode = 3
